--- a/package.json
+++ b/package.json
@@ -9,18 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@fortawesome/free-solid-svg-icons": "^6.5.1",
-    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@clerk/nextjs": "^6.13.0",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
     "@react-three/drei": "^9.96.1",
     "@react-three/fiber": "^8.15.12",
     "@studio-freight/lenis": "^1.0.34",
     "@tabler/icons-react": "^2.46.0",
-    "clsx": "^2.1.0",
+    "appwrite": "^17.0.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^3.3.1",
     "framer-motion": "^11.0.8",
     "gsap": "^3.12.4",
     "lodash.pick": "^4.4.0",
-    "next": "14.0.4",
+    "lucide-react": "^0.487.0",
+    "next": "^14.1.0",
     "react": "^18",
     "react-content-loader": "^6.2.1",
     "react-countdown-circle-timer": "^3.2.1",
@@ -30,14 +38,18 @@
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.6.0",
     "react-loader-spinner": "^6.1.6",
+    "react-loading-indicators": "^1.0.0",
     "react-locomotive-scroll": "^0.2.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.1",
     "react-spinners": "^0.13.8",
     "react-spring": "^9.7.3",
+    "react-toastify": "^11.0.5",
     "styled-jsx": "^5.1.2",
     "swiper": "^6.8.4",
-    "tailwind-merge": "^2.2.1"
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.175.0"
   },
   "devDependencies": {
     "@types/node": "^20",
