refactor: rename project from infinitus-website to algotron-website and update dependencies
delete: remove unused image files from public/images and public/images/sponsers

feat: add TypingAnimation component for animated text display

feat: implement SparklesCore component using tsparticles for dynamic background effects

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "infinitus-website",
+  "name": "algotron-website",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -16,19 +16,23 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
-    "@react-three/drei": "^9.96.1",
-    "@react-three/fiber": "^8.15.12",
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.18.0",
     "@studio-freight/lenis": "^1.0.34",
     "@tabler/icons-react": "^2.46.0",
+    "@tsparticles/engine": "^3.8.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.8.1",
     "appwrite": "^17.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.3.1",
-    "framer-motion": "^11.0.8",
+    "framer-motion": "^11.18.2",
     "gsap": "^3.12.4",
     "lodash.pick": "^4.4.0",
     "lucide-react": "^0.487.0",
-    "next": "^14.1.0",
+    "motion": "^12.6.3",
+    "next": "^15.2.4",
     "react": "^18",
     "react-content-loader": "^6.2.1",
     "react-countdown-circle-timer": "^3.2.1",
@@ -43,7 +47,6 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.1",
     "react-spinners": "^0.13.8",
-    "react-spring": "^9.7.3",
     "react-toastify": "^11.0.5",
     "styled-jsx": "^5.1.2",
     "swiper": "^6.8.4",
