--- a/package.json
+++ b/package.json
@@ -31,13 +31,14 @@
     "gsap": "^3.12.4",
     "lodash.pick": "^4.4.0",
     "lucide-react": "^0.487.0",
-    "motion": "^12.6.3",
+    "motion": "^12.7.3",
     "next": "^15.2.4",
     "react": "^18",
     "react-content-loader": "^6.2.1",
     "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18",
     "react-faq-component": "^1.3.4",
+    "react-fast-marquee": "^1.6.5",
     "react-fontawesome": "^1.7.1",
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.6.0",
